tests/build/fail/widget_new/unknown_field.stderr
error: unknown field `unknown`
 --> $DIR/unknown_field.rs:7:13
  |
7 |             unknown: 0,
  |             ^^^^^^^

error: missing field `margin` in property initializer
 --> $DIR/unknown_field.rs:6:18
  |
6 |           margin = {
  |  __________________^
7 | |             unknown: 0,
8 | |         }
  | |_________^
